fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,11 @@
   box-sizing: border-box;
 }
 
+html, body, #root {
+  width: 100%;
+  height: 100%;
+}
+
 html {
   scroll-behavior: smooth;
 }
